--- a/index.html
+++ b/index.html
@@ -42,59 +42,61 @@
         </div>
         <div class="col-md-10">
           <div class="border ">
-          <h1 class="city"> <span class="date"> </span><i class="icon"></i></h1>
-          <p class="temp">Temp: </p>
+          <h1 class="city"> </h1><span class="date"> </span><i class="icon"></i>
+          <p class="temp">Temp: <span>&#176;</span></p>
           <p class="wind">Wind: </p>
           <p class="humidity">Humidity: </p>
           <p class="uv">UV Index: </p><i class="uv"></i>
         </div>
-          <div class="row col-md-12 fw-bold pb-2 card-title">5-Day Forecast:</div>
-          <div class="row d-inline m-auto cards">
-            <div class="card col-md-12 border-0 d-inline card1" id="card-info">
-              <div class="card-body col-2 d-inline bg-dark card1">
-                <h1></h1>
+          <div class="row col-md-12 fw-bold pb-2">5-Day Forecast:</div>
+          <div class="row m-auto cards">
+            <div class="card col-2 border-0 card1" id="card-info">
+              <div class="card-body col-12  bg-dark card1">
+                <h1 class="card-text"></h1>
                 <i></i>
-                <p class="temp">Temp: </p>
-          <p class="wind">Wind: </p>
-          <p class="humidity">Humidity: </p>
+                <p class="temp card-text">Temp: </p>
+                <p class="wind card-text">Wind: </p>
+                <p class="humidity card-text">Humidity: </p>
               </div>
             </div>
-            <!-- <div class="card col-md-12 border-0 d-inline">
-              <div class="card-body col-2 d-inline bg-dark card2">
-                <h1></h1>
+            <div class="card col-2 border-0 card2" id="card-info">
+              <div class="card-body col-12  bg-dark card1">
+                <h1 class="card-text"></h1>
                 <i></i>
-                <p class="temp">Temp: </p>
-          <p class="wind">Wind: </p>
-          <p class="humidity">Humidity: </p>
+                <p class="temp card-text">Temp: </p>
+                <p class="wind card-text">Wind: </p>
+                <p class="humidity card-text">Humidity: </p>
               </div>
             </div>
-            <div class="card col-md-12 border-0 d-inline">
-              <div class="card-body col-2 d-inline bg-dark card3">
-                <h1></h1>
+            <div class="card col-2 border-0 card3" id="card-info">
+              <div class="card-body col-12  bg-dark card1">
+                <h1 class="card-text"></h1>
                 <i></i>
-                <p class="temp">Temp: </p>
-          <p class="wind">Wind: </p>
-          <p class="humidity">Humidity: </p>
+                <p class="temp card-text">Temp: </p>
+                <p class="wind card-text">Wind: </p>
+                <p class="humidity card-text">Humidity: </p>
               </div>
             </div>
-            <div class="card col-mlg-12 border-0 d-inline">
-              <div class="card-body col-2 d-inline bg-dark card4">
-                <h1></h1>
-                <p class="temp">Temp: </p>
-          <p class="wind">Wind: </p>
-          <p class="humidity">Humidity: </p>
+            <div class="card col-2 border-0 card4" id="card-info">
+              <div class="card-body col-12  bg-dark card1">
+                <h1 class="card-text"></h1>
                 <i></i>
+                <p class="temp card-text">Temp: </p>
+                <p class="wind card-text">Wind: </p>
+                <p class="humidity card-text">Humidity: </p>
               </div>
             </div>
-            <div class="card col-md-12 border-0 d-inline">
-              <div class="card-body col-2 d-inline bg-dark card5">
-                <h1></h1>
+            <div class="card col-2 border-0 card5" id="card-info">
+              <div class="card-body col-12  bg-dark card1">
+                <h1 class="card-text"></h1>
                 <i></i>
-                <p class="temp">Temp: </p>
-          <p class="wind">Wind: </p>
-          <p class="humidity">Humidity: </p>
+                <p class="temp card-text">Temp: </p>
+                <p class="wind card-text">Wind: </p>
+                <p class="humidity card-text">Humidity: </p>
               </div>
-            </div> -->
+            </div>
+          </div>
+          </div>
           </div>
         </div>
       </div>
