--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
               <hr />
             </div>
           </form>
-          <div class="appended-buttons">appended buttons</div>
+          <div class="appended-buttons"></div>
         </div>
         <div class="col-md-10">
-          <div class="border ">
-          <h1 class="city"> </h1><span class="date"> </span><i class="icon"></i>
+          <div class="border p-2">
+          <!-- <h1 class="city"> </h1><span class="date"> </span><i class="icon"></i>
           <p class="temp">Temp: <span>&#176;</span></p>
           <p class="wind">Wind: </p>
           <p class="humidity">Humidity: </p>
-          <p class="uv">UV Index: </p><i class="uv"></i>
+          <p class="uv">UV Index: </p><i class="uv"></i> -->
         </div>
-          <div class="row col-md-12 fw-bold pb-2">5-Day Forecast:</div>
-          <div class="row m-auto cards">
-            <div class="card col-2 border-0 card1" id="card-info">
-              <div class="card-body col-12  bg-dark card1">
+          <div class="row col-10 fw-bold pb-2">5-Day Forecast:</div>
+          <div class="row cards col-12">
+            <!--<div class="card col-2 border-0 card1" id="card-info">
+               <div class="card-body col-12  bg-dark card1">
                 <h1 class="card-text"></h1>
                 <i></i>
                 <p class="temp card-text">Temp: </p>
@@ -59,7 +59,7 @@
                 <p class="humidity card-text">Humidity: </p>
               </div>
             </div>
-            <div class="card col-2 border-0 card2" id="card-info">
+             <div class="card col-2 border-0 card2" id="card-info">
               <div class="card-body col-12  bg-dark card1">
                 <h1 class="card-text"></h1>
                 <i></i>
@@ -94,7 +94,7 @@
                 <p class="wind card-text">Wind: </p>
                 <p class="humidity card-text">Humidity: </p>
               </div>
-            </div>
+            </div> -->
           </div>
           </div>
           </div>
