--- a/index.html
+++ b/index.html
@@ -42,59 +42,11 @@
         </div>
         <div class="col-md-10">
           <div class="border p-2">
-          <!-- <h1 class="city"> </h1><span class="date"> </span><i class="icon"></i>
-          <p class="temp">Temp: <span>&#176;</span></p>
-          <p class="wind">Wind: </p>
-          <p class="humidity">Humidity: </p>
-          <p class="uv">UV Index: </p><i class="uv"></i> -->
+          <!-- today here -->
         </div>
           <div class="row col-10 fw-bold pb-2">5-Day Forecast:</div>
           <div class="row cards col-12">
-            <!--<div class="card col-2 border-0 card1" id="card-info">
-               <div class="card-body col-12  bg-dark card1">
-                <h1 class="card-text"></h1>
-                <i></i>
-                <p class="temp card-text">Temp: </p>
-                <p class="wind card-text">Wind: </p>
-                <p class="humidity card-text">Humidity: </p>
-              </div>
-            </div>
-             <div class="card col-2 border-0 card2" id="card-info">
-              <div class="card-body col-12  bg-dark card1">
-                <h1 class="card-text"></h1>
-                <i></i>
-                <p class="temp card-text">Temp: </p>
-                <p class="wind card-text">Wind: </p>
-                <p class="humidity card-text">Humidity: </p>
-              </div>
-            </div>
-            <div class="card col-2 border-0 card3" id="card-info">
-              <div class="card-body col-12  bg-dark card1">
-                <h1 class="card-text"></h1>
-                <i></i>
-                <p class="temp card-text">Temp: </p>
-                <p class="wind card-text">Wind: </p>
-                <p class="humidity card-text">Humidity: </p>
-              </div>
-            </div>
-            <div class="card col-2 border-0 card4" id="card-info">
-              <div class="card-body col-12  bg-dark card1">
-                <h1 class="card-text"></h1>
-                <i></i>
-                <p class="temp card-text">Temp: </p>
-                <p class="wind card-text">Wind: </p>
-                <p class="humidity card-text">Humidity: </p>
-              </div>
-            </div>
-            <div class="card col-2 border-0 card5" id="card-info">
-              <div class="card-body col-12  bg-dark card1">
-                <h1 class="card-text"></h1>
-                <i></i>
-                <p class="temp card-text">Temp: </p>
-                <p class="wind card-text">Wind: </p>
-                <p class="humidity card-text">Humidity: </p>
-              </div>
-            </div> -->
+            <!-- five day here -->
           </div>
           </div>
           </div>
